ui: Deposit Settings fix Box overflows

--- a/ui/cap-react/src/styles/styles.scss
+++ b/ui/cap-react/src/styles/styles.scss
@@ -358,6 +358,20 @@ label {
 
 // xsmall
 @media only screen and (min-width: 320px) {
+  .deposit-settings-row-to-column {
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: space-between;
+  }
+  .deposit-settings-publish-button {
+    align-items: flex-start !important;
+    flex-direction: row !important;
+    justify-content: space-between !important;
+  }
+
+  .deposit-settings {
+    max-width: 95% !important;
+  }
   // grommet padding changes when smaller screens
   // make sure to keep it consistent
   .grommetux-form-field__contents > div.grommetux-box--pad-horizontal-medium {
@@ -667,8 +681,20 @@ label {
 }
 
 @media only screen and (min-width: 920px) {
+  .deposit-settings-row-to-column {
+    flex-direction: row !important;
+  }
+
+  .deposit-settings {
+    width: unset !important;
+  }
   #list {
     max-width: 91vw;
+  }
+  .deposit-settings-publish-button {
+    align-items: flex-end !important;
+    flex-direction: column !important;
+    justify-content: center !important;
   }
 }
 
